# not-svelte

./: .gitignore  README.md  generate-proto.sh  migrate_cfb.sh  package-lock.json  package.json  vite.config.ts
app/: app.css  root.tsx  routes.ts
app/components/: Team.tsx  movie.tsx
app/routes/: [id].tsx  movies.tsx  teams.tsx
server/: .env.example  Cargo.toml  build.rs
server/db/: cfb_clean.db  migrate_cfb_to_grouped.sql  migration_clean_cfb_data.sql
server/proto/: cfb_team_stats.proto  movie.proto
server/src/: main.rs
