[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
tonic-health = "0.9.2"
tonic-web = "0.9.2"
tower-http = "0.2.3"

[build-dependencies]
tonic-build = "0.8"
